--- a/app/static/css/app.css
+++ b/app/static/css/app.css
@@ -1,3 +1,16 @@
 body {
     padding-top: 5rem;
 }
+
+
+.photos{
+    display: grid;
+    grid-template-columns: 20% 20% 20%;
+    gap: 2rem;
+
+}
+
+.photo{
+    width: 200px;
+    height: 200px;
+}
